schecker text updated

--- a/bardot.html
+++ b/bardot.html
@@ -126,15 +126,15 @@
     </div>
   </div>
 
-
-
-  <div class="wrapper light-bg-f9f9f9">
+  <div class="wrapper">
     <div class="block no-text-block">
       <img alt="Mobile Search" src="./Assets/bardot-m-search.png" />
     </div>
   </div>
 
-  <div class="big-img-wrapper">
+
+
+  <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
     <div class="wrapper big-col">
       <video playsinline autoplay loop muted class="desktop-screen block-in">
@@ -144,7 +144,7 @@
     </div>
   </div>
 
-  <div class="big-img-wrapper light-bg-f9f9f9">
+  <div class="big-img-wrapper">
     <h5 class="block-in">MEGA DROPDOWN MENU</h5>
     <div class="wrapper big-col">
       <video playsinline autoplay loop muted class="desktop-screen block-in">
@@ -154,7 +154,7 @@
     </div>
   </div>
 
-
+<div class="big-img-wrapper light-bg-f9f9f9">
   <div class="wrapper">
     <div class="block small-block">
       <h5>LOCATE IN-STORE</h5>
@@ -166,13 +166,17 @@
       <img alt="Search" class="desktop-screen" src="./Assets/bardot-locateInStore_result.jpg" />
     </div>
   </div>
-
-  <div class="big-img-wrapper light-bg-f9f9f9">
-    <h5 class="block-in">STORE FINDER</h5>
-    <div class="wrapper big-col">      
-      <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
-    </div>
+  <h5 class="block-in">STORE FINDER</h5>
+  <div class="wrapper big-col">
+    <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
   </div>
+
+</div>
+
+
+
+
+
 
 
   <div class="wrapper">
@@ -202,9 +206,10 @@
   <div class="wrapper">
     <div class="block">
       <p>
-        The project involved many stakeholders. Therefore, the communication had to be smooth, otherwise,
-        the outcomes could be disastrous. Having been through similar projects facing the same problems, we had created
-        a uniform communication process in which we made sure everyone was on track of even the slightest changes.
+        The project involved many stakeholders. There were change requests and out-of-scope additional features.
+        Therefore, the communication had to be smooth, otherwise, the outcomes could be disastrous.
+        Having been through similar projects facing the same problems, we had created a uniform communication process
+        in which we made sure everyone was on track of even the slightest changes.
       </p>
     </div>
   </div>
