--- a/sa.html
+++ b/sa.html
@@ -193,9 +193,10 @@
         The project was not too heavy UX/UI-wise, but consistency and details were very important. The client had
         clear requirements on margins, length and visibility of contents above the fold and expected the
         display to retain the same across different screen dimensions. Therefore, we did a lot of responsive testing.
-        As our usual design process, we created a uniform styleguide to use in the designs and development,
-        but still ran into inconsistency problems due to the amount of tailor-made contents. Lesson learned is that
-        flexibility is also important because every client is different.
+        As our usual design process, we created a styleguide to use in the designs and development,
+        but still ran into inconsistency problems due to the large amount of tailor-made contents.
+        After the project, we had learnt to create more effective styleguides and better communication methods amongst
+        the UX/UI team and developers. Flexibility is also a key factor as projects and clients vary. 
       </p>
     </div>
   </div>
