--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -92,7 +92,10 @@
       <div class="block">
         <h5>SYMPTOM(S) & QUESTIONS</h5>
         <p>
-          Tell the app your symptom(s) and answer some relevant questions.
+          Tell the app your symptom(s) and answer some relevant questions. I did a lot of
+          research and believe that with a symptom and right info, it is very likely to get the medical condition(s) right.
+          It will depend on how smart the algorithm is to ask the right questions, analyse the answers and make use of the
+          medical database and the methods of exclusion and inclusion to guess the causes.
         </p>
       </div>
 
@@ -118,10 +121,10 @@
         </div>
 
         <div class="block">
-          <h5 class="secondary-title">GET RESULT</h5>
+          <h5 class="secondary-title">RESULT</h5>
           <p>
-            AI is used to filter out questions base on the answers and analyse them to predict
-            diseases/conditions with high accuracy.
+            Result will be transparent, most matched condition will be showed together with less likely causes.
+            If there are any other medical tests or additional methods needed, info will be indicated.
           </p>
         </div>
 
@@ -131,9 +134,12 @@
     <div class="wrapper">
 
       <div class="block">
-        <h5 class="secondary-title">BOOK APPOINTMENT</h5>
+        <h5 class="secondary-title">APPOINTMENT BOOKING</h5>
         <p>
-          Painlessly book appointments with recommended doctors through a streamlined booking process.
+          From the result, there will be an option to book a doctor appointment, in which a report of the assessment
+          (questions and answers only, I think it would be better to not include the prediction so it won't effect the
+          doctor's judgement and diagnosis) will be send to the doctor prior to the appointment. Official diagnosis
+          will then be compared to Schecker's to improve its accuracy through machine learning.
         </p>
       </div>
 
@@ -161,10 +167,10 @@
       </div>
 
       <div class="block">
-        <h5 class="secondary-title">TRACK SYMPTOMS</h5>
+        <h5 class="secondary-title">SYMPTOM TRACKING</h5>
         <p>
-          Whether ending up with a visit to the doctor's office or not, add the symptoms to watch list and update
-          their progression daily.
+          Track the progression of symptoms and conditions to better manage them. Add medication and get reminders to take
+          it on time.
         </p>
       </div>
 
