--- a/sa.html
+++ b/sa.html
@@ -196,7 +196,7 @@
         As our usual design process, we created a styleguide to use in the designs and development,
         but still ran into inconsistency problems due to the large amount of tailor-made contents.
         After the project, we had learnt to create more effective styleguides and better communication methods amongst
-        the UX/UI team and developers. Flexibility is also a key factor as projects and clients vary. 
+        the UX/UI team and developers. Flexibility is also a key factor as projects and clients vary.
       </p>
     </div>
   </div>
@@ -231,10 +231,10 @@
   <div class="footer-top">
     <h5>MY OTHER WORKS</h5>
     <div class="footer-top-links">
-      <a href="./scheckerIntro.html">Schecker</a>
-      <a href="./sa.html">Standards&nbsp;Australia</a>
       <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
       <a href="./WishUp.html">WishUp</a>
+      <a href="./scheckerIntro.html">Schecker</a>
+      <a href="./bardot.html">Bardot</a>
     </div>
   </div>
   <div class="footer-bottom">
