schecker userflow update

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -93,7 +93,8 @@
         <h5>SYMPTOM(S) & QUESTIONS</h5>
         <p>
           Tell the app your symptom(s) and answer some relevant questions. I did a lot of
-          research and believe that with a symptom and right info, it is very likely to get the medical condition(s) right.
+          research and believe that with a symptom and right info, there are high chances that the medical condition(s)
+          could be addressed.
           It will depend on how smart the algorithm is to ask the right questions, analyse the answers and make use of the
           medical database and the methods of exclusion and inclusion to guess the causes.
         </p>
@@ -179,20 +180,28 @@
 </section>
 
 <section>
-  <h3 class="block-in">EARLY CONCEPT</h3>
+  <h3 class="block-in">CONCEPT DEVELOPMENT</h3>
+
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">INITIAL CONCEPT FLOW</h5>
+    <img alt="user flow" class="block-in" src="./Assets/schecker-simplifiedFlow.png" />
+
+    <h5 class="block-in">LOW FIDELITY WIREFRAME</h5>
+    <img alt="wireframe" class="block-in" src="./Assets/schecker-wireframe.png" />
+  </div>
+
   <div id="schecker-draggable-flow" class="block-in">
-    <h5 class="secondary-title">USER FLOW<br /><small>(drag to view)</small></h5>
-    <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
+    <h5 class="secondary-title">USER FLOW<br /><small>(zoom &amp; drag)</small></h5>
+    <img id="schecker-zoom-btn" alt="Zoom" src="./Assets/schecker-zoomBtn.svg" />
+    <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
   <div class="big-img-wrapper light-bg-f9f9f9">
-    <h5 class="block-in">LOW FIDELITY WIREFRAME</h5>
-    <img alt="wireframe" class="block-in" src="./Assets/schecker-wireframe.png" />
-
-    <h5 class="secondary-title block-in">UI COMPONENTS</h5>
-    <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
-
+    <h5 class="block-in">UI COMPONENTS</h5>
+    <img alt="UI Components" class="not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
   </div>
+
+
 
 
 </section>
