--- a/bardot.html
+++ b/bardot.html
@@ -69,7 +69,7 @@
     <div class="block">
       <h2>Bardot</h2>
       <p>
-        Bardot is an Australia's popular fashion brand for women and juniors.
+        Bardot is one of the most iconic Australia's high fashion brands for women and juniors.
         I was in an UX/UI team to deliver a refreshed eCommerce website as part of their re-platform process.
       </p>
     </div>
@@ -78,7 +78,7 @@
           <strong>Project type</strong> <br />
           Website re-design. <br /><br />
           <strong>My Role</strong> <br />
-          UX/UI design.
+          UX/UI design. Created for S60.
         </p>
       </div>
   </div>
