--- a/credits.html
+++ b/credits.html
@@ -61,10 +61,12 @@
   <h1>Credits</h1>
   <div class="wrapper">
     <p>
-      This website was designed and built by me with the use of artworks from:
+      Website and side projects were designed and built by me with the use of artworks from:
     </p>
   </div>
 
+  <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+  <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a>
   <a href="http://www.freepik.com">Katemangostar / Freepik</a>
   <a href="https://www.pexels.com/photo/photo-of-a-man-in-white-long-sleeved-top-on-blue-and-white-pop-up-camper-753603/">
   Neil Kelly / Pexels</a>
@@ -79,6 +81,7 @@
   <a href="https://greensock.com/gsap">GSAP</a>
   <a href="https://jquery.com/">jQuery</a>
   <a href="http://manos.malihu.gr/page-scroll-to-id/">Malihu's PageScroll2id</a>
+  <a href="https://animejs.com/">Anime.js</a>
 
 
 </section>
