--- a/sa.html
+++ b/sa.html
@@ -79,7 +79,7 @@
           <strong>Project type</strong> <br />
           Website re-design. <br /><br />
           <strong>My Role</strong> <br />
-          Visual design.
+          Visual design. Created for S60.
         </p>
       </div>
   </div>
@@ -105,7 +105,7 @@
 <section>
   <div class="wrapper big-col">
     <h5 class="block-in">MULTI-TIER MENU</h5>
-    <img class="noShadow-img" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
+    <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
     <div class="block no-text-block">
       <img alt="Menu on Mobile" class="appScreen" src="./Assets/sa-m-menu.png" />
     </div>
@@ -119,7 +119,7 @@
     <div class="block small-block">
       <h5>STANDARDS CATEGORY STYLING</h5>
       <p>
-        Each Standards Category is assigned a monochromatic set of coloured blocks.
+        Each Standards Category is assigned a monochromatic set of coloured blocks that comply with the brand's guideline.
       </p>
     </div>
   </div>
@@ -151,7 +151,7 @@
   <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">STANDARD INFO PAGES</h5>
     <div class="wrapper big-col">
-      <img alt="Info Pages" class="noShadow-img" src="./Assets/sa-infoPages.png" />
+      <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
       <div class="block big-block no-text-block" id="sa-info-m-img-block">
         <img alt="Info pages mobile" src="./Assets/sa-m-infoPages.png" />
       </div>
