--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -201,6 +201,8 @@
     <img alt="UI Components" class="not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
   </div>
 
+  <img alt="Completed screens" class="block-in noShadow-img" src="./Assets/schecker-screens.png" />
+
 
 
 
@@ -213,7 +215,7 @@
 
 <section>
 
-  <h3 class="block-in">UI/UX EXPLAINED</h3>
+  <h3 class="block-in">UX/UI EXPLAINED</h3>
 
   <div class="wrapper">
 
@@ -363,14 +365,22 @@
 
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper odd">
     <div class="block">
       <p>
-        <i>For a more interactive experience, please check out my InVision Prototype.</i>
+        <i>
+          <strong>DISCLAIMER</strong><br />
+          This project is my own idea and creation (for experimental purposes) hence should be under my copyright.
+          All contents regarding medical info/advices are for demonstration purposes only.
+          Images & icons were used under CC license (see <a href="./credits.html">Credits</a>).
+        </i>
       </p>
     </div>
 
     <div class="block">
+      <p>
+        For a more interactive experience, please check out my InVision Prototype.
+      </p>
       <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
         <h6 class="CTA-label">VIEW PROTOTYPE</h6>
         <div class="CTAarrow arrow-next" id="scheckerCTA-next">
