--- a/bardot.html
+++ b/bardot.html
@@ -92,7 +92,7 @@
       <p>
         As a dedicated eCommerce website,
         the project required a lot of micro interactions and functionality together with heavy mobile optimisation.
-        My role was to take over the project after the initial concept round from the UI/UX practice lead and
+        My role was to take over the project after the initial concept round from the UX/UI practise lead and
         worked on those micro interactions, functionality and mobile version, as well as amending the designs as
         per client's feedback - all within an allocated timeframe and budget.
       </p>
@@ -105,7 +105,7 @@
     <div class="block small-block">
       <h5>SEARCH</h5>
       <p>
-        Search panel features trending items as 'hints' for customers as we wanted to prioritise introducing and
+        Search panel featured trending items as 'hints' for customers as we wanted to prioritise introducing and
         selling those.
       </p>
     </div>
@@ -120,7 +120,7 @@
     <div class="block small-block">
       <h5>SEARCH SUGGESTION</h5>
       <p>
-        Search suggestions are subjected to keywords and items' availability/popularity, displayed base on the Categories
+        Search suggestions were subjected to keywords and items' availability/popularity, displayed base on the Categories
         taxonomy.
       </p>
     </div>
@@ -136,6 +136,15 @@
 
   <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
+    <div class="block no-margin-top">
+      <p>
+        Base on results and heatmaps from user research team, the majority of user interactions were within the top.
+        Login, Wishlish and Bag were one of the most-clicked items.
+        Thus header interactions were very important. We wanted to provide customers a hassle-free shopping experience
+        by avoiding unnecessary functions/interactions and keeping the header streamlined with only mandatory items easily
+        accessible.
+      </p>
+    </div>
     <div class="wrapper big-col">
       <video playsinline autoplay loop muted class="desktop-screen block-in">
         <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
@@ -146,6 +155,13 @@
 
   <div class="big-img-wrapper">
     <h5 class="block-in">MEGA DROPDOWN MENU</h5>
+    <div class="block no-margin-top">
+      <p>
+        Dropdown navigation menu with integrated CTA banners suggesting trending items, promotions, collections, etc.
+        that were relevant to each category. We made use of the header's real estate as much as possible for
+        contents that we wanted to draw customers' attention to.
+      </p>
+    </div>
     <div class="wrapper big-col">
       <video playsinline autoplay loop muted class="desktop-screen block-in">
         <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
@@ -159,7 +175,9 @@
     <div class="block small-block">
       <h5>LOCATE IN-STORE</h5>
       <p>
-        Popup for quickly check what nearby stores the item is available at.
+        Client wanted to integrate a function to show which stores the item is currently available at for
+        customers who decided to purchase the item in-store. We agreed that this should come up as a popup for a quick
+        check-and-close action before moving on with the shopping.
       </p>
     </div>
     <div class="block big-block no-text-block">
@@ -167,6 +185,11 @@
     </div>
   </div>
   <h5 class="block-in">STORE FINDER</h5>
+  <div class="block no-margin-top">
+    <p>
+      Not to be confused with "Locate in-store". Store finder was basically a stores listing page.
+    </p>
+  </div>
   <div class="wrapper big-col">
     <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
   </div>
