--- a/sa.html
+++ b/sa.html
@@ -105,6 +105,12 @@
 <section>
   <div class="wrapper big-col">
     <h5 class="block-in">MULTI-TIER MENU</h5>
+    <div class="block no-margin-top">
+      <p>
+        Menu had up to 3 levels, each must show a brief of info on hover. It was quite challenging to make the item on hover
+        stand out while keeping the layout simple and consistent. A separate mobile version was also needed.
+      </p>
+    </div>
     <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
     <div class="block no-text-block">
       <img alt="Menu on Mobile" class="appScreen" src="./Assets/sa-m-menu.png" />
@@ -119,7 +125,7 @@
     <div class="block small-block">
       <h5>STANDARDS CATEGORY STYLING</h5>
       <p>
-        Each Standards Category is assigned a monochromatic set of coloured blocks that comply with the brand's guideline.
+        Each Standards Category was assigned a monochromatic set of coloured blocks that comply with the brand's guideline.
       </p>
     </div>
   </div>
@@ -128,7 +134,7 @@
     <div class="block small-block">
       <h5>SEARCH</h5>
       <p>
-        Search panel showing popular/most searched content and standards.
+        Expanded search panel with popular/most searched content and standards showed.
       </p>
     </div>
     <div class="block big-block no-text-block">
@@ -143,7 +149,7 @@
     <div class="block small-block">
       <h5>SEARCH RESULTS</h5>
       <p>
-        Results display in visually distinguished Categories and are sortable/filterable.
+        Results displayed in visually distinguished Categories and were sortable/filterable.
       </p>
     </div>
   </div>
