final but not final

--- a/bardot.html
+++ b/bardot.html
@@ -134,7 +134,7 @@
 
 
 
-  <div class="big-img-wrapper light-bg-f9f9f9">
+  <div class="wrapper big-col light-bg-f9f9f9">
     <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
     <div class="block no-margin-top">
       <p>
@@ -145,15 +145,15 @@
         accessible.
       </p>
     </div>
-    <div class="wrapper big-col">
+
       <video playsinline autoplay loop muted class="desktop-screen block-in">
         <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
-    </div>
   </div>
 
-  <div class="big-img-wrapper">
+
+  <div class="wrapper big-col">
     <h5 class="block-in">MEGA DROPDOWN MENU</h5>
     <div class="block no-margin-top">
       <p>
@@ -162,16 +162,15 @@
         contents that we wanted to draw customers' attention to.
       </p>
     </div>
-    <div class="wrapper big-col">
+
       <video playsinline autoplay loop muted class="desktop-screen block-in">
         <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
-    </div>
   </div>
 
-<div class="big-img-wrapper light-bg-f9f9f9">
-  <div class="wrapper">
+
+  <div class="wrapper light-bg-f9f9f9">
     <div class="block small-block">
       <h5>LOCATE IN-STORE</h5>
       <p>
@@ -184,17 +183,17 @@
       <img alt="Search" class="desktop-screen" src="./Assets/bardot-locateInStore_result.jpg" />
     </div>
   </div>
-  <h5 class="block-in">STORE FINDER</h5>
-  <div class="block no-margin-top">
-    <p>
-      Not to be confused with "Locate in-store". Store finder was basically a stores listing page.
-    </p>
-  </div>
   <div class="wrapper big-col">
+    <h5 class="block-in">STORE FINDER</h5>
+    <div class="block no-margin-top">
+      <p>
+        Not to be confused with "Locate in-store". Store finder was basically a stores listing page.
+      </p>
+    </div>
     <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
   </div>
 
-</div>
+
 
 
 
