--- a/sa.html
+++ b/sa.html
@@ -154,7 +154,7 @@
     </div>
   </div>
 
-  <div class="big-img-wrapper light-bg-f9f9f9">
+  <div class="wrapper big-col light-bg-f9f9f9">
     <h5 class="block-in">STANDARD INFO PAGES</h5>
     <div class="wrapper big-col">
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
