--- a/sa.html
+++ b/sa.html
@@ -103,7 +103,7 @@
 
 
 <section>
-  <div class="wrapper big-col">
+  <div class="wrapper big-col no-margin-top">
     <h5 class="block-in">MULTI-TIER MENU</h5>
     <div class="block no-margin-top">
       <p>
@@ -118,7 +118,7 @@
   </div>
 
 
-  <div class="wrapper odd light-bg-f9f9f9">
+  <div class="wrapper odd light-bg-f9f9f9 add-margin-bottom">
     <div class="block no-text-block">
       <img alt="Category Styling" class="noShadow-img" src="./Assets/sa-categoryColours.png" />
     </div>
@@ -156,12 +156,10 @@
 
   <div class="wrapper big-col light-bg-f9f9f9">
     <h5 class="block-in">STANDARD INFO PAGES</h5>
-    <div class="wrapper big-col">
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
       <div class="block big-block no-text-block" id="sa-info-m-img-block">
         <img alt="Info pages mobile" src="./Assets/sa-m-infoPages.png" />
       </div>
-    </div>
   </div>
 
   <div class="wrapper">
