--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <li><a href="#home-intro" rel="m_PageScroll2id">Home</a></li>
       <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
       <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
-      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>  
+      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
       <li><a href="#about" rel="m_PageScroll2id">About</a></li>
     </ul>
   </div>
@@ -277,9 +277,8 @@
         Throughout my job, I've gained lots of experience working on projects such as Bardot, Standards Australia,
         Radio Rentals, My7Christmas and ShaverShop.
         <br /><br />
-        I am now working on advancing my career and doing something about my ideas, as well as looking for
-        travel/relocation opportunities as I have a passion for adventures and would very much love to
-        experience different cultures.
+        I am now working on advancing my career and experimenting product ideas since I have an ambition for innovation.
+        I am also looking for travel/relocation opportunities as I would love to widen my experiences.
         <br /><br />
         <i class="ease-in-a">Sorry social media isn't my cup of coffee. If you would like to contact me, please
                              <a href="mailto:nhuthoangdon@gmail.com">send me an email</a>.</i>
