--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -184,10 +184,10 @@
 
   <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">INITIAL CONCEPT FLOW</h5>
-    <img alt="user flow" class="block-in" src="./Assets/schecker-simplifiedFlow.png" />
+    <img alt="user flow" class="block-in noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
 
     <h5 class="block-in">LOW FIDELITY WIREFRAME</h5>
-    <img alt="wireframe" class="block-in" src="./Assets/schecker-wireframe.png" />
+    <img alt="wireframe" class="block-in noShadow-img" src="./Assets/schecker-wireframe.png" />
   </div>
 
   <div id="schecker-draggable-flow" class="block-in">
