minor changes to final

--- a/WishUp.html
+++ b/WishUp.html
@@ -100,9 +100,9 @@
       <p>
         It's the movie in which Carl - an elderly widowed man, tries to fulfill his late wife - Ellie's lifetime wish of
         getting to the Paradise Falls against all odds. He gets there in a balloons floating house with helps from
-        special friends.
+        a boy, a dog and a Dodo bird.
         <br /><br />
-        There must be many Carls and Ellies in real life, but without balloons floating houses and special friends.
+        There must be many Carls and Ellies in real life, but without balloons floating houses and such special friends.
         So this social network serves as an asset for the community to help the real life Carls fulfilling their
         lifetime wishes - with kindness and compassion.
       </p>
