--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -98,9 +98,9 @@
 
   <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">SIMPLIFIED FLOW</h5>
-    <img alt="wireframe" class="block-in" src="./Assets/mpf-flow.png" />
+    <img alt="wireframe" class="block-in noShadow-img" src="./Assets/mpf-flow.png" />
     <h5 class="block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
-    <img alt="wireframe" class="block-in" src="./Assets/mpf-wireframe.png" />
+    <img alt="wireframe" class="block-in noShadow-img" src="./Assets/mpf-wireframe.png" />
   </div>
 
 
@@ -133,7 +133,7 @@
       <a href="./WishUp.html">WishUp</a>
       <a href="./scheckerIntro.html">Schecker</a>
       <a href="./bardot.html">Bardot</a>
-      <a href="./sa.html">Standards&nbsp;Australia</a>    
+      <a href="./sa.html">Standards&nbsp;Australia</a>
     </div>
   </div>
   <div class="footer-bottom">
