--- a/WishUp.html
+++ b/WishUp.html
@@ -152,7 +152,22 @@
   <div class="wrapper">
     <h3 class="block-in">MORE TO COME</h3>
   </div>
+  <div class="wrapper">
+    <div class="block">
+      <p>
+        <i>
+          <strong>DISCLAIMER</strong><br />
+          This project is my own idea and creation (for experimental purposes) hence should be under my copyright.
+          All contents regarding info, advices or statistics are for demonstration purposes only.
+          Other materials such as images &amp; icons used in the project and/or this website are under CC license
+          (see <a href="./credits.html">Credits</a>).
+        </i>
+      </p>
+    </div>
+  </div>
 </section>
+
+
 
 
 
