--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -371,15 +371,17 @@
         <i>
           <strong>DISCLAIMER</strong><br />
           This project is my own idea and creation (for experimental purposes) hence should be under my copyright.
-          All contents regarding medical info/advices are for demonstration purposes only.
-          Images & icons were used under CC license (see <a href="./credits.html">Credits</a>).
+          All contents regarding info, advices or statistics are for demonstration purposes only.
+          Other materials such as images &amp; icons used in the project and/or this website are under CC license
+          (see <a href="./credits.html">Credits</a>).
         </i>
       </p>
     </div>
 
     <div class="block">
       <p>
-        For a more interactive experience, please check out my InVision Prototype.
+        I am looking to make a UX revision on this. Meanwhile, please check out my InVision Prototype for a
+        more interactive experience.
       </p>
       <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
         <h6 class="CTA-label">VIEW PROTOTYPE</h6>
