--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -198,7 +198,7 @@
 
   <div class="big-img-wrapper light-bg-f9f9f9">
     <h5 class="block-in">UI COMPONENTS</h5>
-    <img alt="UI Components" class="not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
+    <img alt="UI Components" class="noShadow-img block-in" src="./Assets/schecker-uiComponents.png" />
   </div>
 
   <img alt="Completed screens" class="block-in noShadow-img" src="./Assets/schecker-screens.png" />
