final final change!

--- a/WishUp.html
+++ b/WishUp.html
@@ -152,6 +152,9 @@
   <div class="wrapper">
     <h3 class="block-in">MORE TO COME</h3>
   </div>
+
+  <div class="horizontal-divider"></div>
+
   <div class="wrapper">
     <div class="block">
       <p>
