--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -116,6 +116,8 @@
     <h3 class="block-in">MORE TO COME</h3>
   </div>
 
+    <div class="horizontal-divider"></div>
+
   <div class="wrapper">
     <div class="block">
       <p>
