final final final

--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
 
   </div>
 
+  <div id="other-works-wrapper">
+    <h5 class="small-label ease-in-w">OTHERS</h5>
+    <p class="ease-in-w">
+      Some similar projects I worked on during my employment. <br />
+      Besides, I also have experience working on native apps across a variety of devices.
+    </p>
+    <div class="logos">
+      <a href="https://www.radiorentals.com.au/" class="ease-in-w"><img alt="Radio Rentals" src="./Assets/logo_rr.png" /></a>
+      <a href="https://www.shavershop.com.au/" class="ease-in-w"><img alt="Shaver Shop" src="./Assets/logo_ss.png" /></a>
+      <a href="https://my7christmas.com.au" class="ease-in-w"><img alt="My7Christmas" src="./Assets/logo_my7.png" /></a>
+      <a href="https://www.mjbale.com/" class="ease-in-w"><img alt="M.J. Bale" src="./Assets/logo_mjbale.png" /></a>
+    </div>
+  </div>
+
+
+
+
 </section>
 
 
@@ -273,9 +290,6 @@
       <p class="ease-in-a">
         I graduated in Multimedia Design and started my UX/UI career after an internship at S60, where I later
         progressed as an in-house designer and had the chance to work with some amazing people.
-        <br /><br />
-        Throughout my job, I've gained lots of experience working on projects such as Bardot, Standards Australia,
-        Radio Rentals, My7Christmas and ShaverShop.
         <br /><br />
         I am now working on advancing my career and experimenting product ideas since I have an ambition for innovation.
         I am also looking for travel/relocation opportunities as I would love to widen my experiences.
