text edits final final final

--- a/bardot.html
+++ b/bardot.html
@@ -92,9 +92,10 @@
       <p>
         As a dedicated eCommerce website,
         the project required a lot of micro interactions and functionality together with heavy mobile optimisation.
-        My role was to take over the project after the initial concept round from the UX/UI practise lead and
-        worked on those micro interactions, functionality and mobile version, as well as amending the designs as
-        per client's feedback - all within an allocated timeframe and budget.
+        My role was to take over the project after the initial concept round from the UX/UI practise lead, gather insights
+        from user research team and roll out the designs within an allocated timeframe and budget.
+        I also collaborated with a cross-functional team of developers, project managers and other designers to deliver a
+        a project that would meet client's expectations.
       </p>
     </div>
   </div>
@@ -228,10 +229,13 @@
   <div class="wrapper">
     <div class="block">
       <p>
-        The project involved many stakeholders. There were change requests and out-of-scope additional features.
+        The project involved many stakeholders. There were quite an amount of change requests and out-of-scope
+        additional features.
         Therefore, the communication had to be smooth, otherwise, the outcomes could be disastrous.
         Having been through similar projects facing the same problems, we had created a uniform communication process
         in which we made sure everyone was on track of even the slightest changes.
+        Additionally, I also gained experience working on real life projects that required the designers to
+        compromise and balance out between what they think were good and the actual users/clients' ideas.
       </p>
     </div>
   </div>
