--- a/sa.html
+++ b/sa.html
@@ -94,8 +94,8 @@
         The client was very particular about the display and hiarachy of contents, as well as demanding on
         getting every page properly prototyped interactively to the details
         before the web development. I took part in the website's visual design, and was responsible for
-        the prototyping and communicating with developers to ensure the live site would be consistent
-        with its prototype.
+        the prototyping and communicating with a cross-functional team of developers, project managers and
+        solution architects to ensure the end result would be satisfying to the client.
       </p>
     </div>
   </div>
@@ -107,8 +107,9 @@
     <h5 class="block-in">MULTI-TIER MENU</h5>
     <div class="block no-margin-top">
       <p>
-        Menu had up to 3 levels, each must show a brief of info on hover. It was quite challenging to make the item on hover
-        stand out while keeping the layout simple and consistent. A separate mobile version was also needed.
+        Menu had up to 3 levels, each must show a brief of info on hover.
+        We had to discuss a solution that would meet the UX/UI desires while not exceeding the estimated developing time and
+        efforts.
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
@@ -156,6 +157,12 @@
 
   <div class="wrapper big-col light-bg-f9f9f9">
     <h5 class="block-in">STANDARD INFO PAGES</h5>
+    <div class="block no-margin-top">
+      <p>
+        While client required most of the content pages to be tailor-made, we came up with a solution to display contents as
+        modules/blocks so that both the layout design and developing process would be consistent and efficient.
+      </p>
+    </div>
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
       <div class="block big-block no-text-block" id="sa-info-m-img-block">
         <img alt="Info pages mobile" src="./Assets/sa-m-infoPages.png" />
