--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
 <section class="side-projects" id="works">
 
   <h3 class="ease-in-w">PAST EXPERIENCE</h3>
+  <p class="ease-in-w">
+    Projects I worked on as a full-time in-house designer.
+  </p>
 
   <div class="content-wrapper ease-in-w">
 
@@ -194,11 +197,8 @@
   </div>
 
   <div id="other-works-wrapper">
-    <h5 class="small-label ease-in-w">OTHERS</h5>
-    <p class="ease-in-w">
-      Some similar projects I worked on during my employment. <br />
-      Besides, I also have experience working on native apps across a variety of devices.
-    </p>
+    <h5 class="small-label ease-in-w">SIMILARLY</h5>
+
     <div class="logos">
       <a href="https://www.radiorentals.com.au/" class="ease-in-w"><img alt="Radio Rentals" src="./Assets/logo_rr.png" /></a>
       <a href="https://www.shavershop.com.au/" class="ease-in-w"><img alt="Shaver Shop" src="./Assets/logo_ss.png" /></a>
@@ -206,9 +206,6 @@
       <a href="https://www.mjbale.com/" class="ease-in-w"><img alt="M.J. Bale" src="./Assets/logo_mjbale.png" /></a>
     </div>
   </div>
-
-
-
 
 </section>
 
@@ -220,6 +217,9 @@
 <section class="side-projects" id="other-concepts">
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
+    <p class="ease-in-o">
+      Other product ideas I am working on.
+    </p>
 
     <div class="content-wrapper wrapper-incubation">
       <a href="./myPlasticFootprint.html" class="incubation-tile ease-in-o" id="plasticFootprint-tile">
