--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -72,7 +72,7 @@
     </div>
       <div class="block">
         <p>
-          A smart Health App that makes it easier when you have a symptom.
+          Schecker is my idea of a smart Health App that makes it easier when you have a symptom.
           An all-in-one process of checking symptoms, smartly - booking doctor appointments - managing symptoms &
           medication.
         </p>
