minor final changes!!!

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <section class="side-projects" id="works">
 
   <h3 class="ease-in-w">PAST EXPERIENCE</h3>
-  <p class="ease-in-w">
+  <p class="ease-in-w tagline-text">
     Projects I worked on as a full-time in-house designer.
   </p>
 
@@ -217,7 +217,7 @@
 <section class="side-projects" id="other-concepts">
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
-    <p class="ease-in-o">
+    <p class="ease-in-o tagline-text">
       Other product ideas I am working on.
     </p>
 
