cv minor changes

--- a/my-not-so-mediocre-cv.html
+++ b/my-not-so-mediocre-cv.html
@@ -175,10 +175,10 @@
       <div class="time-mark" id="tl-3rd"></div>
       <div class="achievemnents">
         <div>
-          <h6 id="tl-self">Self improving</h6>
+          <h6 id="tl-self">Self improvement & side projects</h6>
           <ul>
             <li id="tl-frondends">HTML/CSS/JS</li>
-            <li id="tl-side_projects"><a href = "./index.html">Side projects & portfolio</a></li>
+            <li id="tl-side_projects"><a href = "./index.html">Product ideas & portfolio</a></li>
           </ul>
         </div>
       </div>
